2007-04-17  Christian Persch  <chpe@gnome.org>

	* gconf/gconf.c: (gconf_key_check), (gconf_valid_key): Fix strings
	used for errors about invalid keys. Bug #406251.

2007-03-31  Loïc Minier  <lool@dooz.org>

	* configure.in: Check for the lber lib and append it to LDAP_LIBS if
	present since the evoldap backend calls ber_free() directly; fixes
	build failure with -z defs in LDFLAGS; bug #409221.

2007-03-05  Ray Strode  <rstrode@redhat.com>

	* configure.in: Post release bump

============================= 2.18.0.1 ====================

2007-03-05  Ray Strode  <rstrode@redhat.com>

	* configure.in: drop release number to 2.18.0.1

	* NEWS: update for release

2007-03-05  Ray Strode  <rstrode@redhat.com>

	Patch from Loïc Minier to take care of fallout from 
	bug 314343.

	* gconf/backends/markup-tree.c (save_tree): 
	Rename markup file to its final destination, even if
	there wasn't an original file to copy file attributes
	from (bug 414916).

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* configure.in: Post release bump

============================= 2.18.0 ======================

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* configure.in: bump release number

	* NEWS: update for release

	* README: remove mention of popt and 
	add mention of evoldap and older libxml backend

2007-03-02  Christian Persch  <chpe@svn.gnome.org>

	* gconf/gconf.c: (utf8_make_valid), (gconf_key_check),
	(gconf_valid_key): Make sure error strings are UTF-8. Bug #406251.

2007-03-02  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-dir.c: Don't include xml-entry.h twice.

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* gconf/gconf-value.c (gconf_meta_info_free):
	free schema and mod_user fields before freeing
	struct.  Based on patch by 
	Richard Hult <richard@imendio.com>

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* configure.in:
	* gconf/gconf.c:
	drop as much of the legacy popt stuff as we can,
	while remaining compatible (bug 396071). Based on