@@ -1,3 +1,11 @@
+2007-06-21  Christian Persch  <chpe@gnome.org>
+
+	* gconf/gconf-sanity-check.c: (main):
+	* gconf/gconftool.c: (main): Init GThread. Bug #432923.
+
+        * gconf/gconftool.c: (main): Make --help* output translated. Bug
+	#432925.
+
 2007-04-17  Christian Persch  <chpe@gnome.org>
 
 	* gconf/gconf.c: (gconf_key_check), (gconf_valid_key): Fix strings
